# hs-lisp

./: .gitignore  Main.hs  Parser.hs  README.md  hs-lisp.cabal  test.lisp
app/: Main.hs
examples/: compose.lisp  readme.lisp  test.lisp
src/: Evaluator.hs  Grammar.hs  Intrinsics.hs  Parser.hs  StandardContext.hs  Value.hs
