cabal-version:      2.4
name:               hs-lisp
version:            0.1.0.0

synopsis:           Lisp interpreter for a custom flavour of lisp
author:             Job Vonk
maintainer:         sticcpistt@icloud.com

executable lisp-hs
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
                    , containers
                    , transformers
    hs-source-dirs:   app
                    , src
    default-language: Haskell2010
    other-modules:    Parser
                    , Evaluator
                    , Value
                    , StandardContext
